--- a/styles/index.css
+++ b/styles/index.css
@@ -1,34 +1,3 @@
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #1e1e2f;
-    color: white;
-    display: flex;
-}
-
-.sidebar {
-    width: 200px;
-    background-color: #141424;
-    height: 100vh;
-    padding-top: 20px;
-}
-
-.sidebar ul {
-    list-style: none;
-    padding: 0;
-}
-
-.sidebar li {
-    padding: 15px 20px;
-    cursor: pointer;
-    color: #ccc;
-}
-
-.sidebar li.active, .sidebar li:hover {
-    background-color: #2a2a40;
-    color: white;
-}
-
 .main {
     flex: 1;
     padding: 20px;
@@ -66,7 +35,7 @@ header {
 .red { background-color: #c0392b; }
 .green { background-color: #27ae60; }
 .blue { background-color: #2980b9; }
-yellow { background-color: #f1c40f; }
+.yellow { background-color: #f1c40f; }
 
 .content {
     display: flex;
