--- a/styles/teams.css
+++ b/styles/teams.css
@@ -12,13 +12,13 @@
 }
 
 .header h1 {
-    color:#fff;
+    color:var(--text-clr);
 }
 
 .searchBar {
     display: flex;
     align-items: center;
-    background-color: #1f2a3c;
+    background-color: var(--secondary-clr);
     border-radius: 8px;
     padding: 8px 15px;
     width: 350px;
@@ -27,7 +27,7 @@
 .searchBar input {
     background: transparent;
     border: none;
-    color: white;
+    color: var(--text-clr);
     padding: 5px;
     width: 100%;
     outline: none;
@@ -45,7 +45,7 @@
 }
 
 .teamCard {
-    background-color: #1f2a3c;
+    background-color: var(--secondary-clr);
     border-radius: 12px;
     padding: 20px;
     display: flex;
@@ -92,6 +92,7 @@
 .teamName {
     font-size: 1.2rem;
     font-weight: 600;
+    color:var(--text-clr);
 }
 
 .statusLabel {
@@ -154,8 +155,8 @@
 }
 
 .btn {
-    background-color: #374151;
-    color: #fff;
+    background-color: var(--base-clr);
+    color: var(--text-clr);
     padding: 10px 15px;
     border: none;
     border-radius: 8px;
@@ -173,7 +174,7 @@
 }
 
 .btn:hover {
-    background-color: #4b5563;
+    background-color: var(--hover-clr);
 }
 
 .readyIndicator {
