--- a/styles/map.css
+++ b/styles/map.css
@@ -17,11 +17,11 @@
 }
 
 .header h2 {
-  color:#fff;
+    color:var(--text-clr);
 }
 
 .mapCard {
-  background-color: #16223a;
+  background-color: var(--secondary-clr);
   border-radius: 10px;
   padding: 1rem;
   display: flex;
@@ -47,10 +47,10 @@
 }
 
 .topControls button {
-  background: #1f2a44;
+  background: var(--secondary-clr);
   border: none;
   padding: 0.5rem 1rem;
-  color: white;
+  color: var(--opp-clr);
   border-radius: 5px;
   cursor: pointer;
   display: flex;
@@ -66,6 +66,7 @@
 
 .topControls button svg {
     transition: transform 0.3s ease;
+    fill:var(--opp-clr)
 }
 
 .topControls button:hover svg {
