--- a/styles/stats.css
+++ b/styles/stats.css
@@ -1,5 +1,5 @@
 .pageHeading {
-    color:#fff;
+    color:var(--text-clr);
     margin-left:25px;
     margin-top:20px;
 }
@@ -15,14 +15,14 @@
     background-color: var(--secondary-clr);
     width: 600px;
     height:400px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    border: 1px solid var(--border-clr);
     border-radius: 10px;
 }
 
 .chartHeading {
-    color:#fff;
+    color:var(--text-clr);
     padding:15px;
-    border-bottom:1px solid rgba(255, 255, 255, 0.1);
+    border-bottom:1px solid var(--border-clr);
 }
 
 #barChartCanvas {
@@ -39,7 +39,7 @@
     background-color: var(--secondary-clr);
     width: 1235px;
     height: 400px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    border: 1px solid var(--border-clr);
     border-radius: 10px;
     margin: 25px;
 }
@@ -61,7 +61,7 @@
     flex-direction: column;
     justify-content: center;
     background-color: var(--secondary-clr);
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    border: 1px solid var(--border-clr);
     border-radius: 10px;
     width:390px;
     height:100px;
@@ -69,5 +69,5 @@
 }
 
 .individualStatsDiv h1 {
-    color:#fff;
+    color:var(--opp-clr);
 }
